# Tick-Tock-Toe-backend

./: Cargo.toml  Shuttle.toml
.github/workflows/: keep_server_alive.yaml
src/: ai.rs  app.rs  main.rs  three_solver.rs
src/config/: evaluation_table.json
src/game/: mod.rs  state.rs
src/handlers/: game.rs  health.rs  mod.rs
