[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-runtime = "0.12.0"
shuttle-actix-web = "0.12.0"
tokio = { version = "1", features = ["full"] }

[features]
shuttle = []
