[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.6"
tokio = { version = "1", features = ["full"] }
log = "0.4"
